# graphmark

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.afk/: config.toml  run_gate.sh
.github/workflows/: ci.yml  publish.yml
configs/: my-brain.toml
docs/: ROADMAP.md
docs/dev-cycle/: last-run.md  quarantine-log.md  telemetry.jsonl
src/graphmark/: __init__.py  cli.py  config.py  dismiss.py  export.py  graph.py  interfaces.py  metrics.py  model.py  parse.py
tests/: test_cli.py  test_config.py  test_dismiss.py  test_export.py  test_gaps.py  test_gaps_oog.py  test_graph.py  test_interfaces.py  test_metrics.py  test_pagerank.py  test_parse.py  test_scoped.py  test_selflink.py  test_smoke.py
tests/fixtures/: README.md
tests/fixtures/alt/: config.toml  expected.json
tests/fixtures/alt/vault/daily/: 2026-07-01.md
tests/fixtures/alt/vault/docs/: alpha.md  center.md
tests/fixtures/alt/vault/misc/: echo.md  foxtrot.md  orphan.md  stub.md
tests/fixtures/alt/vault/refs/: beta.md  delta.md  gamma.md
tests/fixtures/dismiss/: expected.json
tests/fixtures/dismiss/vault/: alpha.md  beta.md  gamma.md
tests/fixtures/dismiss/vault/.claude/data/: connect-dismissed.json
tests/fixtures/gaps/: config.toml  expected.json  expected_oog.json  similar.json  similar_oog.json
tests/fixtures/gaps/vault/docs/: a.md  hub.md
tests/fixtures/gaps/vault/misc/: c.md  d.md
tests/fixtures/gaps/vault/refs/: b.md  e.md
tests/fixtures/scoped/: config.toml  expected.json
tests/fixtures/scoped/vault/docs/: one.md
tests/fixtures/scoped/vault/junk/: ignored.md
tests/fixtures/scoped/vault/misc/: excluded.md
tests/fixtures/scoped/vault/refs/: two.md
tests/fixtures/selflink/: config.toml  expected.json
tests/fixtures/selflink/vault/: a.md  b.md
tests/fixtures/simple/: config.toml  expected.json
tests/fixtures/simple/vault/brain/: alpha.md  hub.md
tests/fixtures/simple/vault/personal/: beta.md  gamma.md
tests/fixtures/simple/vault/reference/: island.md  stub.md
