[project]
name = "graphmark"
version = "0.1.0"
description = "Deterministic knowledge-graph analysis for markdown / [[wikilink]] vaults."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["networkx>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
graphmark = "graphmark.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphmark"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
